# econ

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  realm_build.json  start-dev.cmd  start-dev.ps1
engine/: ARCHITECTURE.mdc  BEST_PRACTICES.md  README.md  _phase9_headless.py  _quick_year.py  pyproject.toml  realm_solo.py  year.py
engine/realm/: __init__.py  actions.py  agents_genesis.py  agents_genesis_settlers.py  agents_tier1.py  agents_tier2.py  agents_tier3.py  api.py  assay.py  biome_noise.py  buildings.py  contract_stubs.py  decay.py  deep_survey.py  employment.py  energy.py  event_log.py  genesis_analytics.py  genesis_archetypes.py  genesis_bank.py  genesis_broker.py  genesis_consolidator.py  genesis_contracts.py  genesis_digest.py  genesis_energy.py  genesis_exchange_liquidity.py  genesis_feed_hooks.py  genesis_forwards.py  genesis_margaux_opener.py  genesis_margaux_scripts.py  genesis_margaux_sprint5.py  genesis_pricing.py  genesis_road_builders.py  genesis_settler_cycle.py  genesis_settler_names.py  genesis_shippers.py  geo.py  geo_clustering.py  intel.py  inventory.py  (+41 more)
engine/scripts/: api_play_one_game_week.py  check_power_conservation.py  diagnose_day50.py  phase10_playthroughs.py  profile_solo_boot.py  profile_tick.py  quick_labor_day365.py  refactor_imports.py  split_api_routes.py
engine/tests/: conftest.py  plot_helpers.py  stage_materials.py  test_actions.py  test_agents_tier2.py  test_agents_tier3.py  test_alerts_and_feed.py  test_analytics.py  test_api_routes.py  test_archetypes.py  test_assay.py  test_auto_list.py  test_bank_loans.py  (+70 more)
(+739 files in other folders)
