[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realm-engine"
version = "0.1.0"
description = "Authoritative tick-based simulation core for Realm (solo mode v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.42.0",
]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.11.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["realm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["realm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
